--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "@ApothanOpenTourLib/base.html.twig" %}
  {% block body %}
     
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
