--- a/templates/toursells.html.twig
+++ b/templates/toursells.html.twig
@@ -1,4 +1,4 @@
-{% extends "tourbase.html.twig" %}
+{% extends "@ApothanOpenTourLib/tourbase.html.twig" %}
  {% block lower %}
    
     {% block javascripts %}
