--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,59 +6,57 @@
         {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
     </head>
     <body>
-        <div class="container-fluid">
         <div class="ot_main">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ path('ot_home') }}">TourBrand!</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{{ path('ot_home') }}">TourBrand!</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                        </ul>
+                        <form class="form-inline my-2 my-lg-0">
+                            <span><input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"></span>
+                            <span><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button></span>
+                        </form>
                     </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <span><input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"></span>
-                    <span><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button></span>
-                </form>
-            </div>
+                </div>
             </nav>
-        {% block body %}
-        {% endblock %}
-        <!-- Footer -->
-        <footer class="page-footer font-small blue">
-        <br />
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyleft:
-            <a href="https://opentour.tech/"> opentour.tech</a>
-            <br />
-            <a href="{{ path('ot_admin') }}"> Admin</a>
-        </div>
-        <!-- Copyright -->
+            {% block body %}
+            {% endblock %}
 
-        </footer>
-        <!-- Footer -->
+            <!-- Footer -->
+            <footer class="page-footer font-small blue">
+                <br />
+                <!-- Copyright -->
+                <div class="footer-copyright text-center py-3">© 2020 Copyleft:
+                    <a href="https://opentour.tech/"> opentour.tech</a>
+                    <br />
+                    <a href="{{ path('ot_admin') }}"> Admin</a>
+                </div>
+                <!-- Copyright -->
+            </footer>
+            <!-- Footer -->
         </div>
-        </div>
-        
+       
         {% block javascripts %}{{ encore_entry_script_tags('app') }}{% endblock %}
     </body>
 </html>
