Update: added booking using clicctstore

--- a/templates/tour.html.twig
+++ b/templates/tour.html.twig
@@ -62,5 +62,6 @@
         {% endif %}
         </div>
         </div>
+        <a href="{{ path('ot_booktour', { 'id': tour.id }) }}" class="btn btn-primary btn-md" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
 
  {% endblock %}
