--- a/templates/booking.html.twig
+++ b/templates/booking.html.twig
@@ -16,7 +16,7 @@
     <br />
     <div class="row">
         <div class="col">
-             <iframe src="{{bookingUrl}}{{tour.id}}" title="Tour Booking" width="100%" height="800px"></iframe> 
+             <iframe src="{{bookingUrl}}" title="Tour Booking" width="100%" height="800px"></iframe> 
         </div>
     </div>
  {% endblock %}
